--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -6,7 +6,7 @@
 }
 
 .container h2 {
-    font-size: 16px;
+    font-size: 1rem;
     margin: 50px 0px 0px 20px;
 }
 
@@ -20,27 +20,29 @@
     background-color: inherit;
     margin: 0px 10px;
     padding: 0px 10px;
-    width: 280px;
-    
+    width: 45vw;    
 }
 
 .carousel-button {
-    margin: 0px;
-    width: 95vw;
+    display: flex;
+    justify-content: space-between;
+    
+    width: 92vw;
     background-color: none;
     border: none;
-    text-decoration: none;
-    
-    
-}
-
-.carousel-button:first-child {
-    z-index: 10;
-    width: 20%;
+    text-decoration: none;    
 }
 
 button:hover {
     background-color: rgba(0, 0, 0, 0.055);
     cursor: pointer;
     border: none!important;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        margin-left: 0;
+    }
+
+    
 }
