--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,11 +2,9 @@ footer {
     color: rgba(100, 94, 94, 0.651);
     font-size: 14px;
     font-weight: 100;
-    width: 100vh;
+    width: 91vw;
     height: 40vh;
-    margin-top: 8%;
-    position: relative;
-    left: 10%;
+    margin: 80px 0px 10px 80px;
     
 }
 
@@ -75,8 +73,8 @@ footer {
 }
 
 .footer-button {
-    width: 25%;
-    max-height: 5%;
+    width: 15vw;
+    max-height: 10vh;
     padding: 5px 0px 10px 0px;
     margin: 5px;
     text-align: center;
@@ -90,4 +88,35 @@ footer {
 .footer-button:hover {
     color: rgba(245, 245, 245, 0.877);
     border: solid 3px rgba(245, 245, 245, 0.877);
+}
+
+@media only screen and (max-width: 600px) {
+    .container-menus {
+        display: none;
+        
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .container-network {
+        display: flex;
+        margin: 15px;
+    }
+    .container-network > a {
+        padding: 12px;
+        
+    }
+
+    .footer-button {
+        width: 50vw;
+        margin: 15px;
+    }
+    p {
+        margin: 15px;
+    }
+
 }
